Proyecto finalizado y pulido